--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,4 +12,8 @@
     <app-demo (carAdded)="oncarAdded($event)"></app-demo>
 </div>
 
+<div>
+    <button (click) = "navigateToDemo()"> Go to demo</button>
+</div>
+
 
